Fix results button text wrap on small devices

--- a/src/components/ResultsDialog/ResultsDialog.styl
+++ b/src/components/ResultsDialog/ResultsDialog.styl
@@ -156,10 +156,11 @@ results-height=25rem;
 
         button {
             display: inline-block;
-            width: 10rem;
+            width: 11rem;
             height: 3rem;
             cursor: pointer;
             font-size: 1.5rem;
+            white-space: nowrap;
             margin: 0;
         }
     }
